# doc-automation-suite

./: .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  Bao_Cao_TShape_UC4.md  Bao_Cao_Tieu_Luan_NMCNPM.docx  Bao_Cao_Tieu_Luan_NMCNPM.md  Bao_Cao_Tieu_Luan_NMCNPM_Tung.docx  Bao_Cao_Tieu_Luan_NMCNPM_from_docx.md  Bao_Cao_Tieu_Luan_NMCNPM_new.docx  Bieu_Do_Tuan_Tu_Check_In.md  CLAUDE.md  GEMINI.md  Group_6_Bien_ban_hop_Lan1.docx  Group_6_Bien_ban_hop_Lan2.docx  Group_6_Bien_ban_hop_Lan3.docx  Group_6_Bien_ban_hop_Lan4.docx  Makefile  assemble_final.py  auto_merge_branches.ps1  build_tshape_report.py  check_report.py  clean_ch05.py  commit_msg.txt  convert_docx_to_md.py  convert_md_to_docx.py  diagnose.py  extracted_text.txt  fix_ascii.py  fix_headings.py  fix_test_images.py  gen_bien_ban.py  launch.bat  launch.sh  main.py  make.py  merge_reports.py  package-lock.json  package.json  patch_test.py  (+15 more)
.Jules/: palette.md
.claude/: settings.local.json
.jules/: bolt.md  palette.md  sentinel.md
.omx/: metrics.json  project-memory.json
.serena/: project.yml
chapters/: Ch00_header.md  Ch00_toc.md  Ch01_LỜI_MỞ_ĐẦU.md  Ch02_MỞ_ĐẦU_KẾ_HOẠCH_QUẢN_LÝ_DỰ_ÁN_(SPMP_TÓM.md  Ch02_MỞ_ĐẦU_KẾ_HOẠCH_QUẢN_LÝ_DỰ_ÁN_PHẦN_MỀM_.md  Ch03_CHƯƠNG_1_TỔNG_QUAN,_KHẢO_SÁT_VÀ_ĐẶC_TẢ_.md  Ch03_CHƯƠNG_1_TỔNG_QUAN_HỆ_THỐNG_VÀ_PHÂN_CÔN.md  Ch04_CHƯƠNG_2_THIẾT_KẾ_KIẾN_TRÚC_VÀ_CƠ_SỞ_DỮ.md  Ch05_CHƯƠNG_3_NGHIÊN_CỨU_CHUYÊN_SÂU_—_UC04_.md  Ch05_CHƯƠNG_3_NGHIÊN_CỨU_CHUYÊN_SÂU_—_UC06_.md  Ch05_CHƯƠNG_3_NGHIÊN_CỨU_CHUYÊN_SÂU_—_USE_CA.md  Ch06_CHƯƠNG_4_HIỆN_THỰC_HÓA_VÀ_ĐẢM_BẢO_CHẤT_.md  Ch06_CHƯƠNG_4_NGHIÊN_CỨU_CHUYÊN_SÂU_—_USE_CA.md  Ch07_CHƯƠNG_5_NGHIÊN_CỨU_CHUYÊN_SÂU_—_USE_CA.md  Ch07_KẾT_LUẬN.md  Ch08_CHƯƠNG_6_NGHIÊN_CỨU_CHUYÊN_SÂU_—_USE_CA.md  Ch08_TÀI_LIỆU_THAM_KHẢO.md  Ch09_CHƯƠNG_7_NGHIÊN_CỨU_CHUYÊN_SÂU_—_USE_CA.md  Ch10_CHƯƠNG_8_NGHIÊN_CỨU_CHUYÊN_SÂU_—_USE_CA.md  Ch10_KẾT_LUẬN.md  (+4 more)
(+179 files in other folders)
