[project]
name = "doc-automation-suite"
version = "0.1.0"
description = "Toolkit for document processing and office automation"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "python-docx>=1.1.0",
    "tkinterweb>=3.23.0",
    "markdown>=3.6.0",
    "openpyxl>=3.1.2",
    "pypdf>=4.2.0",
    "pdfplumber>=0.11.0",
    "pdf2docx>=0.5.8",
    "pydantic>=2.7.0",
    "click>=8.1.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0"
]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [
    "src/api.py",
    "src/cli.py",
    "src/core/config.py",
    "src/core/logger.py",
    "tests/test_refactored_cli_api.py"
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501", "E402", "E702"]  # E501: line length, E402: module import order, E702: multiple statements

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
